# itop-mcp

./: .env.example  CHANGELOG.md  Dockerfile  MANIFEST.in  Makefile  Makefile.new  PACKAGE_STATUS.md  PROJECT_SUMMARY.md  PUBLICATION_READY.md  PUBLISHING.md  PYPI_TOKEN_SETUP.md  README.md  __init__.py  basic_test.py  claude_desktop_config.json.example  main.py  pyproject.toml  test_itop.py  validate_server.py
nodejs/: .eslintrc.js  README.md  package.json  tsconfig.json
nodejs/src/: index.ts
nodejs/src/__tests__/: index.test.ts
tests/: run_tests.py  test_live.py  test_unit.py
