[project]
name = "itop-mcp"
version = "1.1.0"
description = "Model Context Protocol server for iTop ITSM integration with advanced analytics"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Roney Dsilva", email = "roney@cdmx.in" }
]
maintainers = [
    { name = "Roney Dsilva", email = "roney@cdmx.in" }
]
keywords = [
    "mcp",
    "model-context-protocol", 
    "itop",
    "itsm",
    "ai",
    "assistant",
    "claude",
    "rest-api"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Communications :: Chat",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.4",
]

[project.urls]
Homepage = "https://github.com/roneydsilva/itop-mcp"
Documentation = "https://github.com/roneydsilva/itop-mcp#readme"
Repository = "https://github.com/roneydsilva/itop-mcp.git"
Issues = "https://github.com/roneydsilva/itop-mcp/issues"
Changelog = "https://github.com/roneydsilva/itop-mcp/releases"

[project.scripts]
itop-mcp = "main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.2",
    "flake8>=6.0.0",
    "pre-commit>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.sdist]
include = [
    "main.py",
    "README.md",
    "USAGE.md", 
    "LICENSE",
    "pyproject.toml",
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  __pycache__
  | .git
  | .hg
  | .mypy_cache
  | .tox
  | .venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "E501", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "dist",
    "build",
    ".tox",
    ".venv",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
